<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/register_toolbar_text"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register_name"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/register_name_hint"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register_surname"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editRegisterSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/register_surname_hint"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register_email"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register_birth_date"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editRegisterBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/register_birth_date_hint"
                android:inputType="date"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register_gender"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/registerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/registerRadioMasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/register_gender_masc"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/registerRadioFem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/register_gender_fem"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/registerRadioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/register_gender_other"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register_password"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/register_confirm_password"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/register_password_hint"
                android:padding="12dp"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnRegisterCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_login_button"
                android:text="@string/register_btn_create"
                android:textAllCaps="false"
                android:textColor="@color/default_color"
                android:textStyle="bold"
                android:textSize="20sp"
                app:backgroundTint="@null" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                tools:visibility="visible"
                android:indeterminateTint="@color/white"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>